# pyhockey

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_docs.yaml  build_package.yaml
pyhockey/: __init__.py  goalie_games.py  goalie_summaries.py  goalie_summary.py  skater_games.py  skater_summaries.py  skater_summary.py  team_games.py  team_summary.py
pyhockey/util/: data_disclaimer.py  db_connect.py  input_validation.py  query_builder.py  query_table.py
tests/: test_goalie_games.py  test_goalie_summaries.py  test_input_validation.py  test_query_builder.py  test_skater_games.py  test_skater_summaries.py  test_team_games.py  test_team_summaries.py  test_valid_values.py
tests/expected_results/: goalie_summaries_combined_seasons.csv  goalie_summary.csv  skater_summaries_combined_seasons.csv  skater_summary.csv  team_summaries_combined_seasons.csv  team_summary.csv
util/: db_connect.py  input_validation.py  query_builder.py  query_table.py
