[project]
name = "pyhockey"
version = "0.1.0"
description = "Library for easy querying of advanced NHL statistics."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "duckdb==1.3.2",
    "polars>=1.29.0",
    "pytest>=8.4.2",
    "pyarrow>=21.0.0",
    "numpy>=1.26.0",
]
authors = [
    {name = "Sohraub Pazuki", email = "sohraubpazuki@gmail.com"},
]
license = "GNU"
license-files = ["LICENSE"]
keywords = ["hockey", "stats", "statistics", "NHL", "data"]
